--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "i18next": "^23.16.4",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
+    "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.1.0",
+    "react-intl": "^6.6.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.0"
